Update index.html ABOUT footer

--- a/index.html
+++ b/index.html
@@ -264,21 +264,23 @@
 
   </section>
 
-    <section id="about">
-      <h2>About Ann</h2>
-     <p>Ann K. Chou (she/her) is a hard-of-hearing, neurodivergent multi-sensory artist, access designer, artist-scientist, born in Hong Kong 
-       and currently active on the unceded lands of the xʷməθkʷəy̓əm and lək̓ʷəŋən peoplw —also known as Vancouver and Victoria, BC.</p>
-     <p>Her practice bridges science and art—from microscope imaging to lantern-building—working with light, shadow, recycled materials, 
-       and movement to explore access, ecology, and collective care. 
-       Ann celebrates broken objects, spontaneous collaboration, and joyful inclusion through tactile installations, sumi-e brushwork, and mobile lantern sculptures.</p>
+<section id="about">
+  <h2>Artist & Access Designer</h2>
+  
+  <p><strong>Ann K. Chou</strong> (she/her) is an oral d/Deaf and neurodiverse artist-scientist and access designer whose first language is pictorial. Born in Hong Kong, she is currently active on the unceded lands of the <strong>xʷməθkʷəy̓əm</strong> (Musqueam) and <strong>lək̓ʷəŋən</strong> (Songhees and Esquimalt) peoples—also known as Vancouver and Victoria, BC.</p>
 
-     <p><strong>She believes things are meant to break—and be beautifully rebuilt.</strong></p>
-     <p>Her materials often include translucent fabrics, bamboo, garden clippings, mesh, and upcycled plastics, designed for multisensory engagement and adaptability across diverse environments.</p>
-      
-      <div class="button-group">
-        <a href="artist_bio.html" class="button glow-ink">Learn Ann's Journey →</a>
-      </div>
-    </section>
+  <p>Her practice bridges 20 years of medical laboratory science and Health IT with community-based art—transforming microscope imaging into lantern-building. Working with light, shadow, and salvaged materials, she explores the <strong>A/I/R (Access, Inclusion, Resilience)</strong> framework through tactile installations and sumi-e brushwork.</p>
+
+  <div class="project-banner-note">
+    <p><strong>"I believe materials, like people, can be broken and reformed to carry light."</strong></p>
+  </div>
+
+  <p>Using translucent fabrics, bamboo, garden waste, and upcycled plastics, Ann designs for multisensory engagement and site-specific adaptability. Her work celebrates joyful inclusion and the emotional dimensions of collective care.</p>
+  
+  <div class="button-group">
+    <a href="Practices.html" class="button glow-ink">Explore the Narrative Journey →</a>
+  </div>
+</section>
 
 
     <section id="dual-track">
@@ -542,11 +544,15 @@
 <footer>
   <div class="flex-container2">
     <div class="flex-item-left">
-      Art across generations: lanterns, sumi-e, movement & workshops. 
+      Based on the unceded lands of the <strong>xʷməθkʷəy̓əm</strong> (Vancouver) and <strong>lək̓ʷəŋən</strong> (Victoria) peoples.
       <br>
-      <strong>Visit my <a href="https://beacons.ai/annreflection" style="color: #f6a21d;">Quick Links Hub</a></strong>
+      Art across generations: lanterns, sumi-e, movement & workshops. 
     </div>
-    <div class="flex-item-right">© 2020-2026 Ann K. Chou – All rights reserved</div>
+    <div class="flex-item-right">
+      <strong>Visit my <a href="https://beacons.ai/annreflection" style="color: #f6a21d;">Quick Links Hub</a></strong>
+      <br>
+      © 2020-2026 Ann K. Chou – All rights reserved
+    </div>
   </div>
 </footer>
       
@@ -703,6 +709,7 @@ function initializeTheme(defaultDark) {
 </body>
 
 </html>
+
 
 
 
