Update Practices.html SEO

--- a/Practices.html
+++ b/Practices.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ann K. Chou – Artist, Access Designer, Artist-Scientist</title>
-  <meta name="description" content="Ann K. Chou is a hard-of-hearing, neurodivergent artist, access designer, and artist-scientist working with lanterns, sumi-e, light, and inclusive installation. Her practice bridges art, ecology, and care systems through multisensory design." />	
-  <meta name="keywords" content="Ann K. Chou, Deaf artist, neurodivergent artist, disability arts, inclusive design, lantern sculpture, sumi-e, access-based installation, Victoria BC, Vancouver artist, artist-scientist, healthcare and art" />	
+  <title>Practices & Philosophy | Ann K. Chou – Vancouver & Victoria</title>
+  
+  <meta name="description" content="Explore the narrative journey and core methodologies of Ann K. Chou, an Oral Deaf and neurodiverse artist-scientist specializing in Access Design and multisensory installations across Vancouver and Victoria." />
+  <meta name="keywords" content="Ann K. Chou, Oral Deaf artist, Access Design Vancouver, neurodivergent artist, disability arts BC, lantern structural engineering, multisensory design, artist-scientist, xʷməθkʷəy̓əm territory art, inclusive storytelling" />
   <meta name="author" content="Ann K. Chou" />
-  <meta property="og:title" content="Ann K. Chou – Artist, Access Designer, Artist-Scientist" />
-  <meta property="og:description" content="A multisensory art practice rooted in accessibility, storytelling, and ecological ritual. Ann K. Chou creates lanterns, installations, and workshops that bridge science, care, and creativity." />	
-	<meta property="og:image" content="https://annchou.github.io/rss/AnnChou_Ecoillum_tile.png" />
-	<meta property="og:url" content="https://annchou.github.io/artist-bio.html" />
+
+  <meta property="og:title" content="Practices & Philosophy – Ann K. Chou" />
+  <meta property="og:description" content="Interweaving medical laboratory science with inclusive installation and the A/I/R (Access, Inclusion, Resilience) framework." />
+  <meta property="og:image" content="https://annchou.github.io/rss/AnnChou_Ecoillum_tile.png" />
+  <meta property="og:url" content="https://annchou.github.io/Practices.html" />
 	<meta name="twitter:card" content="summary_large_image" />
 	<link rel="stylesheet" href="css/style_wor.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -107,13 +109,28 @@
 	    </figure>
 	  </div>
 	</section>
+<section id="easy-read-bio">
+  <h2>✨ Easy Read Bio</h2>
+  <p>Hello! I’m Ann. I’m an <strong>Oral Deaf</strong> and neurodiverse artist-scientist and access designer based in Vancouver and Victoria, BC.</p>
+  
+  <div class="project-banner-note">
+    <p><strong>What is Oral Deaf?</strong> As an Oral Deaf person with severe-to-profound hearing loss, I primarily use spoken language (Cantonese and English) and visual-spatial modes—such as pictorial literacy and speech-reading—rather than signed languages like ASL.</p>
+  </div>
+
+  <ul>
+    <li>I am a d/Deaf maker whose first language is pictorial, grounded in Chinese literacy.</li>
+    <li>I make lanterns out of fabric, paper, light, and reclaimed materials.</li>
+    <li>I build non-verbal performances using shadow, texture, and movement.</li>
+  </ul>
+  <p>My art welcomes everyone. You do not need to hear or speak to enjoy it.</p>
+</section>
 	  
     <!--section id="bio-intro">
       <h1>About Me -  Ann K. Chou</h1>
       <h2>(she/her) Artist, Access Designer, and Artist-Scientist</h2>
      <p>I am a hard-of-hearing, neurodivergent, Hong Kong–born artist and access designer, currently active on the unceded lands of the ləķʗəŋən (Songhees and Esquimalt) and xʋməθkʋə̓ɛm (Musqueam) peoples—also known as Victoria and Vancouver, BC.</p>
   </section-->
-
+   <!-- before Jan 17
 	<section id="easy-read-bio">
       <h2>✨ Easy Read Bio</h2>
       <p>Hello! I’m Ann. I’m a Deaf and neurodivergent artist-scientist, maker, acess designer
@@ -126,7 +143,7 @@
       </ul>
       <p>My art welcomes everyone. You do not need to hear or speak to enjoy it. I love to co-create projects that are fun, gentle, and accessible for all.</p>
     </section>
-	  
+	  -->
     <section id="artistic-journey">
       <h2>From Microscope to Lantern Light</h2>
       <p>My creative path began in microscopy photography during Medical Laboratory Science—capturing unseen 
@@ -391,6 +408,7 @@
 
 </body>
 </html>
+
 
 
 
