Update Eco_illum.html add outdoor thing on eco-illumin

--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -110,6 +110,36 @@
 
   <main class="main">
 
+    <section id="outdoor-focus" class="main-content">
+  <div class="project-banner-note">
+    <h2>🌳 Site-Responsive & Outdoor Resilience</h2>
+    <p>
+      My practice explores <strong>Material Resistance</strong>—engineering lanterns and curtains that interact with the wind, rain, and shifting light of outdoor environments. 
+    </p>
+  </div>
+
+  <div class="project-grid">
+    <div class="project-card">
+      <figure>
+        <img src="rss/AC4_Feminist_Dragon_Boats_site_responsive.png" alt="Outdoor lantern installation in a park setting">
+      </figure>
+      <div class="card-text">
+        <h3>Structural Adaptability</h3>
+        <p>Using the <strong>5-joint bamboo technique</strong>, these forms are designed for high structural integrity in public spaces. They resist environmental pressure while maintaining a welcoming, multisensory glow.</p>
+      </div>
+    </div>
+
+    <div class="project-card">
+      <figure>
+        <img src="rss/AC6_Teapot_lantern_depressed_from_tall_cup.png" alt="Upcycled lantern prototype for outdoor use">
+      </figure>
+      <div class="card-text">
+        <h3>Eco-Art Resistance</h3>
+        <p>Built from salvaged plastics and garden waste, these pieces celebrate the <strong>adaptive plasticity</strong> of objects that refuse to be discarded.</p>
+      </div>
+    </div>
+  </div>
+</section>
   <section id="eco-title">
     <h1 class="site-title">Eco-Illuminessence: A Sensory Crossing</h1>
     <p class="highlight-subtitle">A hybrid installation-performance exploring light, shadow, and non-verbal storytelling</p>
@@ -632,6 +662,7 @@ function initializeTheme(defaultDark) {
 
 </body>
 </html>
+
 
 
 
