--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -110,36 +110,7 @@
 
   <main class="main">
 
-    <section id="outdoor-focus" class="main-content">
-  <div class="project-banner-note">
-    <h2>🌳 Site-Responsive & Outdoor Resilience</h2>
-    <p>
-      My practice explores <strong>Material Resistance</strong>—engineering lanterns and curtains that interact with the wind, rain, and shifting light of outdoor environments. 
-    </p>
-  </div>
-
-  <div class="project-grid">
-    <div class="project-card">
-      <figure>
-        <img src="rss/AC4_Feminist_Dragon_Boats_site_responsive.png" alt="Outdoor lantern installation in a park setting">
-      </figure>
-      <div class="card-text">
-        <h3>Structural Adaptability</h3>
-        <p>Using the <strong>5-joint bamboo technique</strong>, these forms are designed for high structural integrity in public spaces. They resist environmental pressure while maintaining a welcoming, multisensory glow.</p>
-      </div>
-    </div>
-
-    <div class="project-card">
-      <figure>
-        <img src="rss/AC6_Teapot_lantern_depressed_from_tall_cup.png" alt="Upcycled lantern prototype for outdoor use">
-      </figure>
-      <div class="card-text">
-        <h3>Eco-Art Resistance</h3>
-        <p>Built from salvaged plastics and garden waste, these pieces celebrate the <strong>adaptive plasticity</strong> of objects that refuse to be discarded.</p>
-      </div>
-    </div>
-  </div>
-</section>
+ 
   <section id="eco-title">
     <h1 class="site-title">Eco-Illuminessence: A Sensory Crossing</h1>
     <p class="highlight-subtitle">A hybrid installation-performance exploring light, shadow, and non-verbal storytelling</p>
@@ -184,6 +155,63 @@
     <em>SPOONS</em> directly informs <strong>Eco-Illuminessence</strong> by bringing shadow improvisation, object animation, and accessible, non-verbal storytelling into the heart of the installation-performance.
   </p>
 </section>
+
+<section id="outdoor-engineering" class="main-content">
+  <div class="project-banner-note">
+    <h2>🌳 Material Resistance: Balancing Organic & Synthetic Resilience</h2>
+    <p>
+      My practice explores the equilibrium between <strong>organic natural matter</strong> and <strong>post-consumer waste</strong>. Drawing on 20 years of medical laboratory science, I test how these contrasting materials react to the West Coast rain season to create durable, site-specific installations.
+    </p>
+  </div>
+
+  <div class="project-grid">
+    <div class="project-card">
+      <div class="card-text">
+        <h3>I. Organic Preservation (The Rabbit Children)</h3>
+        <p>Combining <strong>Mulberry paper</strong> memories with protective fabric layers. This "sandwich" technique uses organic fibers and translucent textiles to ensure traditional ink-work can survive 3-day rain exposure without losing its pictorial essence.</p>
+      </div>
+    </div>
+
+    <div class="project-card">
+      <div class="card-text">
+        <h3>II. Hybrid Skeletons (The Rabbit Mother)</h3>
+        <p>A bridge between <strong>garden clippings</strong> and <strong>abandoned tomato cages</strong>. By integrating organic rosemary and lavender stems with rigid post-consumer garden structures, I create a frame that is both ecologically grounded and structurally resilient.</p>
+      </div>
+    </div>
+
+    <div class="project-card">
+      <div class="card-text">
+        <h3>III. Synthetic Transformation (The Feminist Dragon)</h3>
+        <p>Built from a <strong>collapsed laundry basket</strong> and reinforced grapevines. This design repurposes domestic plastic waste into a lightweight, aerial-ready form, proving that "broken" household objects can be re-engineered for public site-activation.</p>
+      </div>
+    </div>
+
+    <div class="project-card">
+      <div class="card-text">
+        <h3>IV. Post-Consumer Casting (The Turtle)</h3>
+        <p>The peak of <strong>material durability</strong>. Using semi-casting methods with <strong>upcycled plastics</strong>, the Turtle is my most weather-proof iteration. It demonstrates how industrial waste can be reshaped into fast-production, moisture-resistant sculptural forms.</p>
+      </div>
+    </div>
+
+
+    <div class="project-banner-note" style="border-top: 2px solid #C66A53; margin-top: 2rem; padding-top: 2rem;">
+    <h3>🔬 Field Proof: The Neuro-Sensing Walks</h3>
+    <p>
+      My engineering process is validated through <strong>site-responsive sensing walks</strong>. These modular lanterns travel via public transit and ferries to test structural resilience in real-world conditions—from the urban geometry of <strong>Science World</strong> to the high-wind habitats of <strong>Ambleside Beach</strong>.
+    </p>
+    
+    <div style="display: flex; gap: 1rem; flex-wrap: wrap; align-items: center;">
+       <a href="#lantern-travelers-anchor" class="button glow-ink">Explore the Full Photo Documentation ↓</a>
+       <p style="font-size: 0.9rem; margin: 0; color: var(--text-dim);">
+         <em>*Click to jump to the detailed journey of the Owl and Dragon travelers.</em>
+       </p>
+    </div>
+  </div>
+</section>
+ 
+
+  
+</section>
   
   <section>
     <h2>📸 Eco-Illuminessence: A Living Work in Progress</h2>
@@ -198,14 +226,14 @@
     </figure>
   </section>
 
- <!-- 2. Eco-Illuminessence: The Visual & Sensory Core -->
+ <!-- 3. Eco-Illuminessence: The Visual & Sensory Core -->
  <section>
       <h2>🌘 The Visual & Sensory Core</h2>
       <p>This immersive project combines traditional <strong>sumi-e paintings</strong>, animal-shaped <strong>lanterns</strong>, <strong>upcycled garden waste</strong> objects, and semi-translucent fabric sculptures. It invites participants to explore light, shadow, and tactile elements in a layered sensory crossing.</p>
       <p>The <strong>sumi-e curtain</strong> is composed of ~70 clear 11x14 pockets, each holding A4 rice paper ink sketches created during the COVID lockdown via virtual plein-air challenges and later on-location plein-air painting. Visitors are encouraged to interact with the curtain and lanterns using light and objects from a <strong>participant experience station</strong> (glass, bamboo sticks, patterned objects, mesh).</p>
   </section>
 
-    <!-- 3. Lanterns & Eco-Art Approach -->
+    <!-- 4. Lanterns & Eco-Art Approach -->
   <section>
       <h2>🦋 Lanterns & Eco-Art Approach</h2>
       <p> The lanterns are <strong>semi-hard sculptures</strong> and stage characters;
@@ -662,6 +690,7 @@ function initializeTheme(defaultDark) {
 
 </body>
 </html>
+
 
 
 
