Update Practices.html more narrative with lantern

--- a/Practices.html
+++ b/Practices.html
@@ -150,6 +150,14 @@
 		  landscapes of life. Working in healthcare and informatics, I explored how light and texture can
 		  travel across diverse bodies.</p>
 
+		<p>
+My approach to materials is shaped by early professional training as a medical laboratory technologist (2000–2009), followed by long-term work in health IT. Although my formal lab work ended in 2009, I remain an experimenter at heart. Observation, testing, failure, and iteration—first trained in the lab—continue to guide how I work with light, fabric, and reclaimed materials in outdoor environments.
+</p>
+
+		<p>
+My lantern practice is rooted in childhood play and co-making with my mother, where repair, improvisation, and reuse were learned informally at home. In 2003, I attended a one-day lantern master event organized by the Taiwanese Canadian Society. This moment functioned as exposure rather than instruction. My skills were developed primarily through sustained volunteer immersion over many summers—especially with Vancouver Illuminares—where I often spent more hours building lanterns than in my paid work in the medical lab.
+</p>
+
 	<!--	old as bio.html
       <p>My creative path began in microscopy photography during my early studies in Medical Laboratory Science—capturing intimate, unseen landscapes of life. As I worked in healthcare and informatics, I continued to explore photography, pottery, and community festival arts, discovering the expressive potential of light and texture.</p>
       <p>Eventually, lantern-building became my medium: an accessible, communal, and sensory-rich language that could travel across both public spaces and diverse bodies. It led me toward installation, projection, puppetry, and ink brushwork—always guided by a respect for materials and the wisdom of lived experience.</p>
@@ -408,6 +416,7 @@
 
 </body>
 </html>
+
 
 
 
