--- a/Eco_illum.html
+++ b/Eco_illum.html
@@ -160,7 +160,9 @@
   <div class="project-banner-note">
     <h2>🌳 Material Resistance: Balancing Organic & Synthetic Resilience</h2>
     <p>
-      My practice explores the equilibrium between <strong>organic natural matter</strong> and <strong>post-consumer waste</strong>. Drawing on 20 years of medical laboratory science, I test how these contrasting materials react to the West Coast rain season to create durable, site-specific installations.
+My practice explores the equilibrium between organic natural matter and post-consumer waste. This inquiry is informed by early professional training as a medical laboratory technologist (2000–2009), followed by long-term work in health IT. Although my lab career concluded in 2009, I continue to work as an experimenter—testing how contrasting materials respond to prolonged rain, wind, and outdoor exposure across the West Coast. These material trials shape durable, site-responsive installations that evolve through real-world conditions rather than controlled studio environments.
+</p>
+
     </p>
   </div>
 
@@ -190,6 +192,10 @@
       <div class="card-text">
         <h3>IV. Post-Consumer Casting (The Turtle)</h3>
         <p>The peak of <strong>material durability</strong>. Using semi-casting methods with <strong>upcycled plastics</strong>, the Turtle is my most weather-proof iteration. It demonstrates how industrial waste can be reshaped into fast-production, moisture-resistant sculptural forms.</p>
+        <p class="highlight-note">
+Much of this material knowledge was developed through repeated volunteer-based lantern building over many summers—particularly with Vancouver Illuminares—where large-scale forms such as the Whale and floating airplane required collaborative problem-solving, lightweight balance, and weather resilience.
+</p>
+Among the volunteer-built works I am most proud of are the Whale and floating airplane lanterns created with Vancouver Illuminares (circa mid-2000s), which required collaborative engineering, lightweight balance, and outdoor durability.
       </div>
     </div>
 
@@ -690,6 +696,7 @@ function initializeTheme(defaultDark) {
 
 </body>
 </html>
+
 
 
 
