Update workshops.html workshop philoscopy

--- a/workshops.html
+++ b/workshops.html
@@ -108,6 +108,17 @@
   </div>
 </section>
 
+<section id="philosophy" class="main-content">
+  <div class="project-banner-note">
+    <h2>🎨 Workshop Philosophy: Beyond the Glue</h2>
+    <p>
+      Traditional lantern workshops rely on white PVC glue—a method that is pragmatically impossible for "make-and-take" community sessions. Glue requires long drying times and definitively fails during the rainy autumn festival season. 
+    </p>
+    <p>
+      My workshops move <strong>Beyond the Glue</strong>, teaching mechanical fastening (<strong>stapling, wire-tension, and hand-sewing</strong>). This ensures participants can take their work home immediately and that the lanterns are durable enough to survive the West Coast rain.
+    </p>
+  </div>
+</section>
 
 
 <section id="featured-event">
