--- a/Practices.html
+++ b/Practices.html
@@ -194,6 +194,18 @@ My lantern practice is rooted in childhood play and co-making with my mother, wh
         <p>Using modular lanterns in public spaces to facilitate non-verbal interaction and community connection (De’VIA-informed).</p>
       </div>
     </div>
+		<div class="project-banner-note">
+    <h2>🛠️ Lineage-Driven Methodology: Lanterns as Living Surfaces</h2>
+    <p>
+      My practice treats lanterns as <strong>living surfaces</strong> rather than finished objects. Rooted in childhood co-making and informal repair traditions, I work through reuse, adaptation, and weather-resilient construction. Materials are tested in real conditions—rain, wind, repeated transport—and refined through iterative repair rather than replacement.
+    </p>
+    <p>
+      Early volunteer-based lantern building with <strong>Vancouver Illuminares</strong> shaped my approach to collaborative engineering and durability, while my background in <strong>medical laboratory science</strong> trained me to observe material behavior as an experimenter. 
+    </p>
+    <p>
+      Organic matter and post-consumer waste are combined not for contrast, but for <strong>balance</strong>—allowing scent, texture, and light to emerge as sensory access points. This positions lanterns as social characters and ecological witnesses, carrying time, care, and shared labor into public space.
+    </p>
+  </div
   </section>
 
 
@@ -416,6 +428,7 @@ My lantern practice is rooted in childhood play and co-making with my mother, wh
 
 </body>
 </html>
+
 
 
 
