Update workshops.html Workshop Philosophy

--- a/workshops.html
+++ b/workshops.html
@@ -112,11 +112,13 @@
   <div class="project-banner-note">
     <h2>🎨 Workshop Philosophy: Beyond the Glue</h2>
     <p>
-      Traditional lantern workshops rely on white PVC glue—a method that is pragmatically impossible for "make-and-take" community sessions. Glue requires long drying times and definitively fails during the rainy autumn festival season. 
+      Traditional lantern workshops rely on white PVC glue—a method that is pragmatically impossible for "make-and-take" community sessions and definitively fails during the rainy autumn festival season.
     </p>
-    <p>
-      My workshops move <strong>Beyond the Glue</strong>, teaching mechanical fastening (<strong>stapling, wire-tension, and hand-sewing</strong>). This ensures participants can take their work home immediately and that the lanterns are durable enough to survive the West Coast rain.
-    </p>
+    <ul class="project-meta">
+      <li><strong>Pragmatic Immediacy:</strong> Mechanical fastening (stapling and wire-tension) allows participants to take their work home immediately without waiting for glue to dry.</li>
+      <li><strong>Adaptive Access:</strong> Heavy-duty staplers are provided for participants who may not have the fine motor skills required for hand-sewing.</li>
+      <li><strong>Weather Resilience:</strong> Mechanical joins ensure the lanterns are durable enough to survive the West Coast rain season.</li>
+    </ul>
   </div>
 </section>
 
