Update Practices.html make journey nicer

--- a/Practices.html
+++ b/Practices.html
@@ -91,7 +91,6 @@
 </div>
 
   <main class="main">
-	<h1 class="pillar-header">📖 The Narrative</h1>
 
   <!-- ✅ Triple Identity Banner with ARIA, Parallax Effect -->
 	<section id="triple-identity" aria-labelledby="triple-identity-caption">
@@ -109,9 +108,10 @@
 	    </figure>
 	  </div>
 	</section>
+	  <! ----1> 
 <section id="easy-read-bio">
   <h2>✨ Easy Read Bio</h2>
-  <p>Hello! I’m Ann. I’m an <strong>Oral Deaf</strong> and neurodiverse artist-scientist and access designer based in Vancouver and Victoria, BC.</p>
+  <p>Hello! I’m Ann. I’m an <strong>Oral Deaf</strong> and neurodiverse artist-scientist and access designer.</p>
   
   <div class="project-banner-note">
     <p><strong>What is Oral Deaf?</strong> As an Oral Deaf person with severe-to-profound hearing loss, I primarily use spoken language (Cantonese and English) and visual-spatial modes—such as pictorial literacy and speech-reading—rather than signed languages like ASL.</p>
@@ -124,139 +124,70 @@
   </ul>
   <p>My art welcomes everyone. You do not need to hear or speak to enjoy it.</p>
 </section>
-	  
-    <!--section id="bio-intro">
-      <h1>About Me -  Ann K. Chou</h1>
-      <h2>(she/her) Artist, Access Designer, and Artist-Scientist</h2>
-     <p>I am a hard-of-hearing, neurodivergent, Hong Kong–born artist and access designer, currently active on the unceded lands of the ləķʗəŋən (Songhees and Esquimalt) and xʋməθkʋə̓ɛm (Musqueam) peoples—also known as Victoria and Vancouver, BC.</p>
-  </section-->
-   <!-- before Jan 17
-	<section id="easy-read-bio">
-      <h2>✨ Easy Read Bio</h2>
-      <p>Hello! I’m Ann. I’m a Deaf and neurodivergent artist-scientist, maker, acess designer
-		  based in Vancouver and Victoria, BC.</p>
-      <ul>
-        <li>I make lanterns out of fabric, paper, light, vines, and plastic.</li>
-        <li>I paint with black ink on translucent surfaces (called sumi-e).</li>
-        <li>I build puppets and small stages using boxes and recycled materials.</li>
-        <li>I perform without speaking—using movement, light, and shadow.</li>
-      </ul>
-      <p>My art welcomes everyone. You do not need to hear or speak to enjoy it. I love to co-create projects that are fun, gentle, and accessible for all.</p>
-    </section>
-	  -->
-    <section id="artistic-journey">
-      <h2>From Microscope to Lantern Light</h2>
-      <p>My creative path began in microscopy photography during Medical Laboratory Science—capturing unseen 
-		  landscapes of life. Working in healthcare and informatics, I explored how light and texture can
-		  travel across diverse bodies.</p>
 
-		<p>
-My approach to materials is shaped by early professional training as a medical laboratory technologist (2000–2009), followed by long-term work in health IT. Although my formal lab work ended in 2009, I remain an experimenter at heart. Observation, testing, failure, and iteration—first trained in the lab—continue to guide how I work with light, fabric, and reclaimed materials in outdoor environments.
-</p>
-
-		<p>
-My lantern practice is rooted in childhood play and co-making with my mother, where repair, improvisation, and reuse were learned informally at home. In 2003, I attended a one-day lantern master event organized by the Taiwanese Canadian Society. This moment functioned as exposure rather than instruction. My skills were developed primarily through sustained volunteer immersion over many summers—especially with Vancouver Illuminares—where I often spent more hours building lanterns than in my paid work in the medical lab.
-</p>
-
-	<!--	old as bio.html
-      <p>My creative path began in microscopy photography during my early studies in Medical Laboratory Science—capturing intimate, unseen landscapes of life. As I worked in healthcare and informatics, I continued to explore photography, pottery, and community festival arts, discovering the expressive potential of light and texture.</p>
-      <p>Eventually, lantern-building became my medium: an accessible, communal, and sensory-rich language that could travel across both public spaces and diverse bodies. It led me toward installation, projection, puppetry, and ink brushwork—always guided by a respect for materials and the wisdom of lived experience.</p>
-   -->
-	<!--</section>
-
+	<!--- 2--->
 	  
 
-    <section id="annreflection">-->
-      <h2>Annreflection Studio: <!--A Practice of Listening and Illumination--></h2>
-		<p>Annreflection Studio is where material meets meaning. I use upcycled paper, vines, and 
-			mesh to make space for stories beyond words. I believe materials, like people, can be broken 
-			and reformed to carry light.</p>
-		<!--	old as bio.html
-      <p>Annreflection Studio is where material meets meaning. I create multisensory works from upcycled paper, garden clippings, clear plastics, mesh, fabric, and vines—making space for stories beyond words. My work honors fragmentation and transformation: I believe materials, like people, can be broken and reformed in ways that carry light.</p>
-      <p>Each lantern, shadow-stage, or brush painting is an invitation—to pause, to reflect, to adapt. Whether in storefront windows or woodland trails, I design with mobility, texture, and tenderness in mind.</p>
-      -->
-	</section>
-	  
-  <h1 class="pillar-header">🧠 The Philosophy</h1>
-	<section id="methodologies">
-    <h2>Core Methodologies</h2>
-    <div class="method-grid">
-      <div class="method-card">
-        <h3>Draw-Aloud Symptom/s (DAS)</h3>
-        <p>A visual wandering protocol and self-explanation model for mapping internal narratives through live sketching.</p>
-      </div>
-      <div class="method-card">
-        <h3>Moving-Light Animation</h3>
-        <p>Animating stories by moving handheld lights over stationary lanterns to create characters in motion.</p>
-      </div>
-      <div class="method-card">
-        <h3>Lanterns as Social Characters</h3>
-        <p>Using modular lanterns in public spaces to facilitate non-verbal interaction and community connection (De’VIA-informed).</p>
-      </div>
-    </div>
-		<div class="project-banner-note">
+<h1 class="pillar-header">📖 The Narrative</h1>
+
+<section id="artistic-journey">
+  <h2>From Microscope to Lantern Light</h2>
+  <p>My creative path began in microscopy photography during Medical Laboratory Science—capturing unseen landscapes of life. Working in healthcare and informatics (2000–2020), I explored how light and texture can travel across diverse bodies.</p>
+
+  <p>My approach to materials is shaped by 20 years in medical laboratory science and health IT. Although my formal lab work ended in 2009, I remain an experimenter at heart—testing how materials respond to prolonged rain, wind, and outdoor exposure across the West Coast.</p>
+
+  <p>My lantern practice is rooted in childhood play and co-making with my mother, where repair and reuse were learned informally. My skills were developed primarily through sustained volunteer immersion with <strong>Vancouver Illuminares</strong>, where I spent more hours building lanterns than in my paid lab work.</p>
+
+  <h2>Annreflection Studio</h2>
+  <p>Annreflection Studio is where material meets meaning. I use upcycled paper, vines, and mesh to make space for stories beyond words. I believe materials, like people, can be broken and reformed to carry light.</p>
+</section>
+
+<!--- 3 -->
+<h1 class="pillar-header">🧠 The Philosophy</h1>
+
+<section id="methodology" class="main-content">
+  <div class="project-banner-note">
     <h2>🛠️ Lineage-Driven Methodology: Lanterns as Living Surfaces</h2>
-    <p>
-      My practice treats lanterns as <strong>living surfaces</strong> rather than finished objects. Rooted in childhood co-making and informal repair traditions, I work through reuse, adaptation, and weather-resilient construction. Materials are tested in real conditions—rain, wind, repeated transport—and refined through iterative repair rather than replacement.
-    </p>
-    <p>
-      Early volunteer-based lantern building with <strong>Vancouver Illuminares</strong> shaped my approach to collaborative engineering and durability, while my background in <strong>medical laboratory science</strong> trained me to observe material behavior as an experimenter. 
-    </p>
-    <p>
-      Organic matter and post-consumer waste are combined not for contrast, but for <strong>balance</strong>—allowing scent, texture, and light to emerge as sensory access points. This positions lanterns as social characters and ecological witnesses, carrying time, care, and shared labor into public space.
-    </p>
-  </div
-  </section>
+    <p>My practice treats lanterns as <strong>living surfaces</strong> rather than finished objects. Materials are tested in real conditions—rain, wind, repeated transport—and refined through iterative repair rather than replacement.</p>
+    <p>Organic matter and post-consumer waste are combined for <strong>balance</strong>—allowing scent, texture, and light to emerge as sensory access points. This positions lanterns as ecological witnesses, carrying shared labor into public space.</p>
+  </div>
 
+  <h2>Core Methodologies</h2>
+  <div class="method-grid">
+    <div class="method-card">
+      <h3>Draw-Aloud Symptom/s (DAS)</h3>
+      <p>A visual wandering protocol and self-explanation model for mapping internal narratives through live sketching.</p>
+    </div>
+    <div class="method-card">
+      <h3>Moving-Light Animation</h3>
+      <p>Animating stories by moving handheld lights over stationary lanterns to create characters in motion.</p>
+    </div>
+    <div class="method-card">
+      <h3>Lanterns as Social Characters</h3>
+      <p>Using modular lanterns in public spaces to facilitate non-verbal interaction and community connection.</p>
+    </div>
+  </div>
+</section>
 
-
-	 <section id="access-philosophy">
-    <h2>Accessibility as Creative Foundation</h2>
-    <p>As a deaf and neurodivergent artist, I prioritize design for inclusion, not afterthought. 
-		My performances are often non-verbal, using scent, texture, and light for multi-sensory access.</p>
+<section id="access-philosophy">
+  <h2>Accessibility as Creative Foundation</h2>
+  <p>As a d/Deaf and neurodivergent artist, I prioritize design for <strong>inclusion, not afterthought</strong>. My performances are often non-verbal, using scent, texture, and light for multi-sensory access.</p>
     
-   <!-- <section id="access-statement">
-      <h2>Accessibility as Creative Foundation</h2>
-      <p>As a deaf and neurodivergent artist, I prioritize design for inclusion, not afterthought. My performances are often non-verbal. My exhibitions and workshops welcome alternative pacing, communication, and sensory experience.</p>
-      <ul>
-        <li>Visually expressive, low-audio formats</li>
-        <li>Light, texture, projection, and scent for multi-sensory access</li>
-        <li>Flexible, mobile works that adapt to space and weather</li>
-        <li>Hands-on workshops with clear visual guidance and tactile materials</li>
-      </ul>
-    </section>-->
-    <h2>Art × Technology as Ethnography</h2>
-    <p>With 15+ years in digital health, I apply data visualization and co-design to care. I see technology 
-		as expressive beings—metaphorical butterflies or altars that surface emotional dimensions of care.</p>
+  <h2>Art × Technology as Ethnography</h2>
+  <p>I see technology as expressive beings—metaphorical butterflies or altars that surface emotional dimensions of care. My research at <strong>SFU (MSc, 2024)</strong> explores how technology reflects how we imagine together.</p>
 
-	<!--	 
-    <section id="ethnography-dialogue">
-        <h2>Art × Technology as Ethnography and Dialogue</h2>
-	<p>Over more than 15 years working in hospitals and digital health, I’ve applied data visualization, ethnographic methods, and participatory co-design to digitally mediated care. I often met people in their everyday environments and brought a sense of critical hope into the design of personal health records—encouraging patients to express their experiences in ways that felt natural and meaningful to them.
-	<p>In one co-design project exploring personal health records and agency, we discovered that even technologies carry personas. These tools revealed themselves not as neutral or mundane interfaces, but as expressive, symbolic beings—like butterflies, bats, dogs, and altars. These metaphors surfaced the emotional and cultural dimensions of care technologies, and they continue to shape how I design lanterns, workshops, and interactive experiences today.
-	<p>As a <b>hard-of-hearing, neurodivergent artist-scientist and access designer</b>, I often rely on <b>non-verbal, visual-spatial modes of reflection</b>. My practice embraces alternative forms of communication—through light, movement, texture, and metaphor—to create spaces where data, care, and creativity can coexist. Whether in a clinical setting or a public art installation, I see each project as a dialogue: between systems and stories, between structure and softness.   
-    </section>
-		 -->
-    <h2>Technology Is Never Neutral</h2>
-    <p>I view paper and light as “slow technologies” that invite care rather than control. My research at SFU explores how technology reflects how we imagine together.</p>
+  <h2>Technology Is Never Neutral</h2>
+  <p>I view paper and light as “slow technologies” that invite care rather than control.</p>
+</section>
 
-
-	<!--
-    <section id="technology-philosophy">
-	<h2>Technology Is Never Neutral</h2>
-	<p>My work explores not just how we use technology—but what technology is. At SFU, I studied its nature as both tool and relationship: shaped by values, pace, and purpose. I see paper, fabric, and light as “slow technologies” that invite care, not control. Through participatory co-design, multisensory methods, and storytelling, I design for relational access and shared meaning—whether in health systems or public art. Technology is never neutral; it reflects how we live, feel, and imagine together.</p>
-    </section>
-		 -->
-   </section>
-
-
+<!---4-->
 
 <h1 class="pillar-header">⚖️ The Evidence</h1>
 
 <section id="exhibitions">
   <h2>Selected Exhibitions & Performances</h2>
   <div class="exhibit-item">
-    <h3>Eco-Illuminescence: A Sensory Crossing (2025)</h3>
+    <h3>Eco-Illuminessence: A Sensory Crossing (2025)</h3>
     <p>Xchanges Gallery, Victoria | BC Arts Council Awarded. Immersive hybrid performance integrating back-lit Sumi-e curtains and animal-lantern characters.</p>
   </div>
   <div class="exhibit-item">
@@ -428,6 +359,7 @@ My lantern practice is rooted in childhood play and co-making with my mother, wh
 
 </body>
 </html>
+
 
 
 
